# launchpad-platform

./: .gitignore  AUTH_CHAT_IMPLEMENTATION_REPORT.md  BACKEND_ARCHITECTURE.md  BACKEND_CLEANUP_COMPLETE.md  BUILD_PLAN.md  CHAT_TESTING_GUIDE.md  CLEANUP_2026-02-03.md  CLEANUP_PLAN.md  DBC_CURVE_CONFIG_CHALLENGE.md  DBC_DEBUG_STATUS.md  DBC_IMPLEMENTATION_STATUS.md  DBC_RESEARCH.md  DBC_SUCCESS.md  DEVELOPER_IMPLEMENTATION_GUIDE.md  DEVELOPMENT_RULES.md  FEATURE2_COMPLETION_REPORT.md  FEATURE2_FINAL_REPORT.md  FEATURE3_COMPLETION_REPORT.md  FEATURE3_SEARCH_TEST_RESULTS.md  FEATURE3_TEST_RESULTS.md  FEATURE6_BOT_BADGE_COMPLETION_REPORT.md  FEATURE7_ADVANCED_TRADING_COMPLETION_REPORT.md  FEATURE7_SUMMARY.txt  FIXES_2026-02-03.md  FRONTEND_DELIVERY.md  IMPLEMENTATION_COMPLETE.md  LAYOUT_REDESIGN_SPEC.md  PHASE1_COMPLETION_REPORT.md  PM_REPORT_FEATURE2.md  PORTFOLIO_TEST_RESULTS.md  PRODUCTION_STATUS.md  README.md  REWARDS_API_COMPLETE.md  SKILL.md  SUBAGENT_AUTH_CHAT_SUMMARY.txt  SUBAGENT_FINAL_REPORT.md  SUBAGENT_SESSION_REPORT_SEARCH.md  TASK_FEATURE2_SEARCH_BY_ADDRESS.md  TASK_PHASE1_TOKEN_DETAIL.md  TEST_REPORT_2026-02-03.md  (+6 more)
backend/: .dockerignore  .env.backup  .env.example  .env.old-config  .gitignore  1_PERCENT_FEES_ENABLED.md  API_REFERENCE.md  API_REWARDS.md  BACKEND_AUDIT.md  BUILD_SUMMARY.md  CHAT_API.md  CLEANUP_REPORT.md  DBC_API_RESEARCH.md  DBC_CONFIG_FEE_FLOW.md  DBC_IMPLEMENTATION.md  DBC_SUCCESS.md  DBC_TRADE_HISTORY_RESEARCH.md  DEPLOYMENT.md  Dockerfile  FEE_COLLECTION_EXPLAINED.md  INDEXER_FILTERING.md  IPFS_SETUP.md  METEORA_BUILD_SUMMARY.md  METEORA_COMPLETION_REPORT.md  METEORA_INTEGRATION.md  METEORA_QUICKSTART.md  README.md  REFACTOR_NATIVE_DBC_FEES.md  REVENUE_WALLET_FLOW.md  SWAGGER_AUTH_REFACTOR.md  TEST_RESULTS.md  check-db-token.js  check-fee-distribution.js  check-opump-token.js  create-new-config-with-fees.js  docker-compose.yml  inspect-dbc-sdk.js  list-tables.js  package.json  submit-dbc-config.js  (+3 more)
backend/scripts/: create-platform-wallet.ts  test-create-config-minimal.ts  test-dbc-full.ts  test-dbc-quick.sh
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/decorators/: wallet.decorator.ts
backend/src/auth/strategies/: jwt.strategy.ts
backend/src/chat/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts
backend/src/chat/dto/: send-message.dto.ts
backend/src/chat/guards/: chat-rate-limit.guard.ts  ws-jwt.guard.ts
backend/src/database/: data-source.ts  database.module.ts
backend/src/database/entities/: bot-creator-reward.entity.ts  chat-ban.entity.ts  chat-message.entity.ts  chat-room.entity.ts  fee-claimer-vault.entity.ts  holder.entity.ts  platform-config.entity.ts  platform-stats.entity.ts  token.entity.ts  trade.entity.ts  user.entity.ts
backend/src/database/repositories/: token.repository.ts  trade.repository.ts
backend/src/database/seeds/: seed.ts
backend/src/indexer/: indexer.module.ts  indexer.service.ts
backend/src/meteora-api/: index.ts  meteora-api.module.ts
backend/src/meteora-api/controllers/: admin-dbc.controller.ts  dbc.controller.ts  lp-management.controller.ts  pools.controller.ts  rewards.controller.ts  sol-price.controller.ts  tokens.controller.ts  trading.controller.ts  transaction-builder.controller.ts
backend/src/meteora-api/dto/: build-transaction.dto.ts  create-dbc-token.dto.ts  create-token.dto.ts  pool-info.dto.ts  trade.dto.ts
backend/src/meteora-api/entities/: lp-position.entity.ts  lp-withdrawal.entity.ts  meteora-pool.entity.ts  meteora-transaction.entity.ts
backend/src/meteora-api/services/: auto-pool-creation.service.ts  dbc.service.ts  fee-collection.scheduler.ts  (+9 more)
backend/src/private-api/: private-api.module.ts
backend/src/public-api/: public-api.module.ts
backend/src/websocket/: websocket.gateway.ts  websocket.module.ts
backend/test/: app.e2e-spec.ts  meteora-integration.e2e-spec.ts
contracts/: Anchor.toml  BUILD_FIX_REPORT.md  Cargo.toml  DEPLOY_GUIDE.md  Dockerfile.build  FINAL_STATUS_REPORT.md  HANDOFF.md  README.md  SOLUTION_TECHNICAL_NOTES.md  SUBAGENT_SUCCESS_REPORT.md  package-lock.json  package.json  tsconfig.json
contracts/migrations/: .gitkeep
contracts/programs/bonding-curve/: Cargo.toml  README.md
contracts/programs/bonding-curve/src/: lib.rs
contracts/programs/graduation/: Cargo.toml  README.md
contracts/programs/graduation/src/: lib.rs
contracts/programs/pump/: Cargo.toml
contracts/programs/pump/src/: lib.rs
contracts/programs/pump/src/instructions/: add_liquidity.rs  remove_liquidity.rs  swap.rs
contracts/programs/token-factory/: Cargo.toml  README.md
contracts/programs/token-factory/src/: lib.rs
contracts/scripts/: deploy-devnet.sh  deploy-mainnet.sh  test-local.sh
contracts/tests/: bonding-curve.test.ts  graduation.test.ts  token-factory.test.ts
docs/: ARCHITECTURE.md  DYNAMIC_BONDING_CURVE.md  FEE_COLLECTION_SYSTEM.md  IMAGE_UPLOAD_IMPLEMENTATION.md  METEORA_POOL_CREATION.md  QUICK_START.md  README.md  SOL_PRICE_IMPLEMENTATION_EXAMPLE.md  SOL_PRICE_SYSTEM.md  TOKEN_CREATION_FIX.md  WALLET_INTEGRATION_AUDIT.md
frontend/: COMPLETED.md  MOBILE_OPTIMIZATION_SUMMARY.md  MOBILE_TESTING.md  README.md  SUBAGENT_REPORT_FEATURE_8.md  WALLET_SETUP.md  WATCHLIST_COMPLETION_REPORT.md  WATCHLIST_TEST_GUIDE.md  angular.json  package.json  tailwind.config.js  test-search-feature.js  test-watchlist.js  verify-watchlist-implementation.sh
frontend/src/: index.html  main.ts  manifest.json  service-worker.js  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.ts
frontend/src/environments/: environment.prod.ts  environment.ts  wallet-config.ts
memory/: 2026-02-02-dbc-implementation.md  pm-assignment-2026-02-03.md
skills/launchpad-trader/: INSTALL.md  README.md  SKILL.md  launchpad  test-skill.sh
skills/launchpad-trader/config/: api.config.json  wallet.example.json
skills/launchpad-trader/scripts/: buy-token.sh  create-token.sh  get-balance.sh  get-token-info.sh  list-new.sh  list-trending.sh  search-tokens.sh  sell-token.sh
(+103 files in other folders)
