[package]
name = "bonding-curve"
version = "0.1.0"
description = "Bonding curve automated market maker for token price discovery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
spl-token = "4.0.0"
