[package]
name = "bonding-curve"
version = "0.1.0"
description = "Bonding curve automated market maker for token price discovery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"

# Removed dev-dependencies to avoid blake3 edition2024 conflict
# Tests will use the TypeScript test framework instead
