[package]
name = "graduation"
version = "0.1.0"
description = "Graduation handler for migrating tokens to Raydium DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "graduation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
