[package]
name = "graduation"
version = "0.1.0"
description = "Graduation handler for migrating tokens to Raydium DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "graduation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
getrandom = { version = "0.1", features = ["dummy"] }
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
blake3 = "=1.5.1"
ahash = "=0.7.8"

# Removed dev-dependencies to avoid blake3 edition2024 conflict
