[package]
name = "token-factory"
version = "0.1.0"
description = "Factory for creating SPL tokens with bonding curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
