[package]
name = "token-factory"
version = "0.1.0"
description = "Factory for creating SPL tokens with bonding curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
mpl-token-metadata = "3.2.1"

# Removed dev-dependencies to avoid blake3 edition2024 conflict
